Update keyframes on slider to prevent jump cut at the end

--- a/magic/assets/css/infinite_slider.css
+++ b/magic/assets/css/infinite_slider.css
@@ -15,7 +15,7 @@
         var(--width) * var(--imageQuantity) * 2
     ); /* Double the width for seamless looping */
     gap: calc(var(--width) / 4);
-    animation: autoScroll 30s linear infinite;
+    animation: autoScroll 15s linear infinite;
 }
 
 .slider .list:hover {
@@ -40,7 +40,7 @@
         transform: translateX(0);
     }
     100% {
-        transform: translateX(calc(-1 * var(--width) * var(--imageQuantity)));
+        transform: translateX(calc(-1 * var(--width) * (var(--imageQuantity) + 1)));
     }
 }
 
